saticg/subfile/PDDLGrammarParser.py
# Generated from PDDLGrammar.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PDDLGrammarParser ( Parser ):

    grammarFileName = "PDDLGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'domain'", "'problem'", "'define'", "'agentid'", 
                     "'constants'", "'type'", "'predicates'", "'action'", 
                     "'event'", "'events'", "'pldegree'", "'eventmodel'", 
                     "'parameters'", "'tercondition'", "'precondition'", 
                     "'constraint'", "'response'", "'observation'", "'min'", 
                     "'max'", "'numbers'", "'normal'", "'misere'", "'effect'", 
                     "'object'", "'increase'", "'decrease'", "'assign'", 
                     "'agent'", "'either'", "'objects'", "'init'", "'goal'", 
                     "'('", "')'", "'['", "']'", "':'", "'?'", "'.'", "'_'", 
                     "'-'", "'+'", "'*'", "'/'", "'%'", "'%='", "'='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'and'", "'or'", "'not'", 
                     "'oneof'", "'Implies'", "'forall'", "'exists'", "'when'" ]

    symbolicNames = [ "<INVALID>", "DOMAIN", "PROBLEM", "DEFINE", "AGENTID", 
                      "CONST", "TYPE", "PREDICATE", "ACTION", "EVENT", "EVENTS", 
                      "PLDEGREE", "EVENTMODEL", "PARAMETER", "TERCONDITION", 
                      "PRECONDITION", "CONSTRAINT", "RESPONSE", "OBSERVATION", 
                      "MIN", "MAX", "NUMS", "NORMAL", "MISERE", "EFFECT", 
                      "OBJECT", "INC", "DEC", "ASSIGN", "AGENT", "EITHER", 
                      "OBJS", "INIT", "GOAL", "LB", "RB", "LSB", "RSB", 
                      "COLON", "QM", "POINT", "UL", "MINUS", "PLUS", "MULT", 
                      "DIV", "MOD", "MODTEST", "EQ", "NEQ", "LT", "LEQ", 
                      "GT", "GEQ", "AND", "OR", "NOT", "ONEOF", "IMPLIES", 
                      "FORALL", "EXISTS", "WHEN", "NAME", "INTEGER", "VAR", 
                      "FUNSYM", "WS" ]

    RULE_domain = 0
    RULE_objectDefine = 1
    RULE_terconditionDefine = 2
    RULE_constraintDefine = 3
    RULE_predicate = 4
    RULE_types = 5
    RULE_actionDefine = 6
    RULE_actionSymbol = 7
    RULE_typeName = 8
    RULE_emptyOrPreGD = 9
    RULE_emptyOrEffect = 10
    RULE_listName = 11
    RULE_listVariable = 12
    RULE_oneofDefine = 13
    RULE_gd = 14
    RULE_termAtomForm = 15
    RULE_termLiteral = 16
    RULE_constTerm = 17
    RULE_term = 18
    RULE_effect = 19
    RULE_cEffect = 20
    RULE_condEffect = 21
    RULE_pEffect = 22
    RULE_assignop = 23
    RULE_problemName = 24
    RULE_domainName = 25
    RULE_agentDefine = 26
    RULE_objectDeclaration = 27
    RULE_init = 28
    RULE_constTermAtomForm = 29

    ruleNames =  [ "domain", "objectDefine", "terconditionDefine", "constraintDefine", 
                   "predicate", "types", "actionDefine", "actionSymbol", 
                   "typeName", "emptyOrPreGD", "emptyOrEffect", "listName", 
                   "listVariable", "oneofDefine", "gd", "termAtomForm", 
                   "termLiteral", "constTerm", "term", "effect", "cEffect", 
                   "condEffect", "pEffect", "assignop", "problemName", "domainName", 
                   "agentDefine", "objectDeclaration", "init", "constTermAtomForm" ]

    EOF = Token.EOF
    DOMAIN=1
    PROBLEM=2
    DEFINE=3
    AGENTID=4
    CONST=5
    TYPE=6
    PREDICATE=7
    ACTION=8
    EVENT=9
    EVENTS=10
    PLDEGREE=11
    EVENTMODEL=12
    PARAMETER=13
    TERCONDITION=14
    PRECONDITION=15
    CONSTRAINT=16
    RESPONSE=17
    OBSERVATION=18
    MIN=19
    MAX=20
    NUMS=21
    NORMAL=22
    MISERE=23
    EFFECT=24
    OBJECT=25
    INC=26
    DEC=27
    ASSIGN=28
    AGENT=29
    EITHER=30
    OBJS=31
    INIT=32
    GOAL=33
    LB=34
    RB=35
    LSB=36
    RSB=37
    COLON=38
    QM=39
    POINT=40
    UL=41
    MINUS=42
    PLUS=43
    MULT=44
    DIV=45
    MOD=46
    MODTEST=47
    EQ=48
    NEQ=49
    LT=50
    LEQ=51
    GT=52
    GEQ=53
    AND=54
    OR=55
    NOT=56
    ONEOF=57
    IMPLIES=58
    FORALL=59
    EXISTS=60
    WHEN=61
    NAME=62
    INTEGER=63
    VAR=64
    FUNSYM=65
    WS=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DomainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(PDDLGrammarParser.LB)
            else:
                return self.getToken(PDDLGrammarParser.LB, i)

        def DEFINE(self):
            return self.getToken(PDDLGrammarParser.DEFINE, 0)

        def DOMAIN(self):
            return self.getToken(PDDLGrammarParser.DOMAIN, 0)

        def NAME(self):
            return self.getToken(PDDLGrammarParser.NAME, 0)

        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(PDDLGrammarParser.RB)
            else:
                return self.getToken(PDDLGrammarParser.RB, i)

        def objectDefine(self):
            return self.getTypedRuleContext(PDDLGrammarParser.ObjectDefineContext,0)


        def terconditionDefine(self):
            return self.getTypedRuleContext(PDDLGrammarParser.TerconditionDefineContext,0)


        def constraintDefine(self):
            return self.getTypedRuleContext(PDDLGrammarParser.ConstraintDefineContext,0)


        def actionDefine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PDDLGrammarParser.ActionDefineContext)
            else:
                return self.getTypedRuleContext(PDDLGrammarParser.ActionDefineContext,i)


        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_domain

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDomain" ):
                return visitor.visitDomain(self)
            else:
                return visitor.visitChildren(self)




    def domain(self):

        localctx = PDDLGrammarParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(PDDLGrammarParser.LB)
            self.state = 61
            self.match(PDDLGrammarParser.DEFINE)
            self.state = 62
            self.match(PDDLGrammarParser.LB)
            self.state = 63
            self.match(PDDLGrammarParser.DOMAIN)
            self.state = 64
            self.match(PDDLGrammarParser.NAME)
            self.state = 65
            self.match(PDDLGrammarParser.RB)
            self.state = 66
            self.objectDefine()
            self.state = 67
            self.terconditionDefine()
            self.state = 68
            self.constraintDefine()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PDDLGrammarParser.LB:
                self.state = 69
                self.actionDefine()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(PDDLGrammarParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(PDDLGrammarParser.LB, 0)

        def COLON(self):
            return self.getToken(PDDLGrammarParser.COLON, 0)

        def OBJS(self):
            return self.getToken(PDDLGrammarParser.OBJS, 0)

        def listVariable(self):
            return self.getTypedRuleContext(PDDLGrammarParser.ListVariableContext,0)


        def RB(self):
            return self.getToken(PDDLGrammarParser.RB, 0)

        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_objectDefine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectDefine" ):
                return visitor.visitObjectDefine(self)
            else:
                return visitor.visitChildren(self)




    def objectDefine(self):

        localctx = PDDLGrammarParser.ObjectDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_objectDefine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(PDDLGrammarParser.LB)
            self.state = 78
            self.match(PDDLGrammarParser.COLON)
            self.state = 79
            self.match(PDDLGrammarParser.OBJS)
            self.state = 80
            self.listVariable()
            self.state = 81
            self.match(PDDLGrammarParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerconditionDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(PDDLGrammarParser.LB, 0)

        def COLON(self):
            return self.getToken(PDDLGrammarParser.COLON, 0)

        def TERCONDITION(self):
            return self.getToken(PDDLGrammarParser.TERCONDITION, 0)

        def emptyOrPreGD(self):
            return self.getTypedRuleContext(PDDLGrammarParser.EmptyOrPreGDContext,0)


        def RB(self):
            return self.getToken(PDDLGrammarParser.RB, 0)

        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_terconditionDefine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerconditionDefine" ):
                return visitor.visitTerconditionDefine(self)
            else:
                return visitor.visitChildren(self)




    def terconditionDefine(self):

        localctx = PDDLGrammarParser.TerconditionDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_terconditionDefine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(PDDLGrammarParser.LB)
            self.state = 84
            self.match(PDDLGrammarParser.COLON)
            self.state = 85
            self.match(PDDLGrammarParser.TERCONDITION)
            self.state = 86
            self.emptyOrPreGD()
            self.state = 87
            self.match(PDDLGrammarParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(PDDLGrammarParser.LB, 0)

        def COLON(self):
            return self.getToken(PDDLGrammarParser.COLON, 0)

        def CONSTRAINT(self):
            return self.getToken(PDDLGrammarParser.CONSTRAINT, 0)

        def emptyOrPreGD(self):
            return self.getTypedRuleContext(PDDLGrammarParser.EmptyOrPreGDContext,0)


        def RB(self):
            return self.getToken(PDDLGrammarParser.RB, 0)

        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_constraintDefine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraintDefine" ):
                return visitor.visitConstraintDefine(self)
            else:
                return visitor.visitChildren(self)




    def constraintDefine(self):

        localctx = PDDLGrammarParser.ConstraintDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constraintDefine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PDDLGrammarParser.LB)
            self.state = 90
            self.match(PDDLGrammarParser.COLON)
            self.state = 91
            self.match(PDDLGrammarParser.CONSTRAINT)
            self.state = 92
            self.emptyOrPreGD()
            self.state = 93
            self.match(PDDLGrammarParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PDDLGrammarParser.NAME, 0)

        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_predicate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = PDDLGrammarParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(PDDLGrammarParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT(self):
            return self.getToken(PDDLGrammarParser.OBJECT, 0)

        def AGENT(self):
            return self.getToken(PDDLGrammarParser.AGENT, 0)

        def NAME(self):
            return self.getToken(PDDLGrammarParser.NAME, 0)

        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_types

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = PDDLGrammarParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PDDLGrammarParser.OBJECT) | (1 << PDDLGrammarParser.AGENT) | (1 << PDDLGrammarParser.NAME))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(PDDLGrammarParser.LB)
            else:
                return self.getToken(PDDLGrammarParser.LB, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PDDLGrammarParser.COLON)
            else:
                return self.getToken(PDDLGrammarParser.COLON, i)

        def ACTION(self):
            return self.getToken(PDDLGrammarParser.ACTION, 0)

        def actionSymbol(self):
            return self.getTypedRuleContext(PDDLGrammarParser.ActionSymbolContext,0)


        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(PDDLGrammarParser.RB)
            else:
                return self.getToken(PDDLGrammarParser.RB, i)

        def PARAMETER(self):
            return self.getToken(PDDLGrammarParser.PARAMETER, 0)

        def listVariable(self):
            return self.getTypedRuleContext(PDDLGrammarParser.ListVariableContext,0)


        def PRECONDITION(self):
            return self.getToken(PDDLGrammarParser.PRECONDITION, 0)

        def emptyOrPreGD(self):
            return self.getTypedRuleContext(PDDLGrammarParser.EmptyOrPreGDContext,0)


        def EFFECT(self):
            return self.getToken(PDDLGrammarParser.EFFECT, 0)

        def emptyOrEffect(self):
            return self.getTypedRuleContext(PDDLGrammarParser.EmptyOrEffectContext,0)


        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_actionDefine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionDefine" ):
                return visitor.visitActionDefine(self)
            else:
                return visitor.visitChildren(self)




    def actionDefine(self):

        localctx = PDDLGrammarParser.ActionDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_actionDefine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(PDDLGrammarParser.LB)
            self.state = 100
            self.match(PDDLGrammarParser.COLON)
            self.state = 101
            self.match(PDDLGrammarParser.ACTION)
            self.state = 102
            self.actionSymbol()
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 103
                self.match(PDDLGrammarParser.COLON)
                self.state = 104
                self.match(PDDLGrammarParser.PARAMETER)
                self.state = 105
                self.match(PDDLGrammarParser.LB)
                self.state = 106
                self.listVariable()
                self.state = 107
                self.match(PDDLGrammarParser.RB)


            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 111
                self.match(PDDLGrammarParser.COLON)
                self.state = 112
                self.match(PDDLGrammarParser.PRECONDITION)
                self.state = 113
                self.emptyOrPreGD()


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PDDLGrammarParser.COLON:
                self.state = 116
                self.match(PDDLGrammarParser.COLON)
                self.state = 117
                self.match(PDDLGrammarParser.EFFECT)
                self.state = 118
                self.emptyOrEffect()


            self.state = 121
            self.match(PDDLGrammarParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PDDLGrammarParser.NAME, 0)

        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_actionSymbol

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionSymbol" ):
                return visitor.visitActionSymbol(self)
            else:
                return visitor.visitChildren(self)




    def actionSymbol(self):

        localctx = PDDLGrammarParser.ActionSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_actionSymbol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(PDDLGrammarParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NORMAL(self):
            return self.getToken(PDDLGrammarParser.NORMAL, 0)

        def MISERE(self):
            return self.getToken(PDDLGrammarParser.MISERE, 0)

        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_typeName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeName" ):
                return visitor.visitTypeName(self)
            else:
                return visitor.visitChildren(self)




    def typeName(self):

        localctx = PDDLGrammarParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typeName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not(_la==PDDLGrammarParser.NORMAL or _la==PDDLGrammarParser.MISERE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmptyOrPreGDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_emptyOrPreGD

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PreGDBracketContext(EmptyOrPreGDContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PDDLGrammarParser.EmptyOrPreGDContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(PDDLGrammarParser.LB, 0)
        def RB(self):
            return self.getToken(PDDLGrammarParser.RB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreGDBracket" ):
                return visitor.visitPreGDBracket(self)
            else:
                return visitor.visitChildren(self)


    class IsGdContext(EmptyOrPreGDContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PDDLGrammarParser.EmptyOrPreGDContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def gd(self):
            return self.getTypedRuleContext(PDDLGrammarParser.GdContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIsGd" ):
                return visitor.visitIsGd(self)
            else:
                return visitor.visitChildren(self)



    def emptyOrPreGD(self):

        localctx = PDDLGrammarParser.EmptyOrPreGDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_emptyOrPreGD)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = PDDLGrammarParser.IsGdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.gd()
                pass

            elif la_ == 2:
                localctx = PDDLGrammarParser.PreGDBracketContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(PDDLGrammarParser.LB)
                self.state = 129
                self.match(PDDLGrammarParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmptyOrEffectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_emptyOrEffect

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IsEffectContext(EmptyOrEffectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PDDLGrammarParser.EmptyOrEffectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def effect(self):
            return self.getTypedRuleContext(PDDLGrammarParser.EffectContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIsEffect" ):
                return visitor.visitIsEffect(self)
            else:
                return visitor.visitChildren(self)


    class EffectBracketContext(EmptyOrEffectContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PDDLGrammarParser.EmptyOrEffectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LB(self):
            return self.getToken(PDDLGrammarParser.LB, 0)
        def RB(self):
            return self.getToken(PDDLGrammarParser.RB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEffectBracket" ):
                return visitor.visitEffectBracket(self)
            else:
                return visitor.visitChildren(self)



    def emptyOrEffect(self):

        localctx = PDDLGrammarParser.EmptyOrEffectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_emptyOrEffect)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = PDDLGrammarParser.IsEffectContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.effect()
                pass

            elif la_ == 2:
                localctx = PDDLGrammarParser.EffectBracketContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(PDDLGrammarParser.LB)
                self.state = 134
                self.match(PDDLGrammarParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(PDDLGrammarParser.NAME)
            else:
                return self.getToken(PDDLGrammarParser.NAME, i)

        def MINUS(self):
            return self.getToken(PDDLGrammarParser.MINUS, 0)

        def types(self):
            return self.getTypedRuleContext(PDDLGrammarParser.TypesContext,0)


        def listName(self):
            return self.getTypedRuleContext(PDDLGrammarParser.ListNameContext,0)


        def getRuleIndex(self):
            return PDDLGrammarParser.RULE_listName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListName" ):
                return visitor.visitListName(self)
            else:
                return visitor.visitChildren(self)




    def listName(self):
